Fix gap css problem

--- a/src/pages/styles/About.module.scss
+++ b/src/pages/styles/About.module.scss
@@ -9,8 +9,6 @@
   min-width: 1200px;
   overflow-y: scroll;
   padding-top: 8rem;
-  row-gap: 5vh;
-
 
   @keyframes show {
     0% {
@@ -36,6 +34,7 @@
     overflow-y: hidden;
     color: black;
     background-color: rgba(255, 255, 255, 0.65);
+    margin-bottom: 5vh;
 
     .skill__title {
       color: rgba(0, 0, 0, .95);
@@ -99,14 +98,14 @@
     }
 
     .title {
-      font-size: 1rem;
+      font-size: 1.5rem;
       font-weight: 700;
       margin-bottom: .5rem;
     }
     .education {
       .info {
         display: flex;
-        column-gap: 1rem;
+        
         > div {
           flex: 1;
         }
